<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">LogicQuizApp</string>
    <string name="whipped"> Whipped cream </string>
    <string name="intro"> Just do IT with Logic </string>
    <string name="name_val"> Your name here... </string>
    <string name="good_luck"> Good luck! </string>
    <string name="question_val"> Kevin, Nicholas or Joseph???</string>
    <string name="question_1"> 1. Kevin, Joseph, and Nicholas are 3 brothers. If the following statements are all true, which of them is the youngest? \n </string>
    <string name="question_1_1">   Kevin is the oldest.\nNicholas is not the oldest.\nJoseph is not the youngest.\n </string>
    <string name="question_2"> 2. Merlin realizes that all Alakazams are Open Sesames, and some Hocus Pocuses are Alakazams.\nIs it true that some Hocus Pocuses are Open Sesames?\n </string>
    <string name="question_2_1">Note: There is at least one of each item.\n </string>
    <string name="question_3">3. One of the women bellow is named Kaylee and the other is named Inara. They each make a statement as shown; if we know that at least one of them is a lie, what is the color of the shirt that Inara is wearing? And who is the liar?\n</string>
    <string name="question_3_1">Note: This is a multiple choice question. Chose two\n </string>
    <string name="answer_3_a"> Blue </string>
    <string name="answer_3_b"> Orange </string>
    <string name="answer_3_c"> Not enought info </string>
    <string name="answer_3_d"> Inara is the liar </string>
    <string name="answer_3_e"> Kaylee is the liar </string>
    <string name="answer_3_f"> Both Kaylee and Inara are lying </string>
    <string name="question_4">4. There is exactly 1 false statement in this list.\nThere are exactly 2 false statements in this list.\nThere are exactly 3 false statements in this list.\n</string>
    <string name="question_4_1">Exactly how many false statements are there in the list above?\n </string>
    <string name="answer_4_a"> 0 </string>
    <string name="answer_4_b"> 1 </string>
    <string name="answer_4_c"> 2 </string>
    <string name="answer_4_d"> 3 </string>
    <string name="answer_2_true"> True </string>
    <string name="answer_2_false"> False </string>
    <string name="quantity"> Quantity </string>
    <string name="start_quiz"> Start </string>
    <string name="toast_msg_username_error"> Please type your name here! </string>
    <string name="submit_answer"> Check result </string>
    <string name="your_result"> Logic test result </string>
    <string name="initial_peercent"> 100% </string>
    <string name="send_result"> Share Result </string>
    <string name="restart"> Restart Quiz </string>
    <string name="percent">%</string>
    <string name="address"> cschiriac@luxoft.com </string>
    <string name="result_email_subject"> Logic test result for </string>
    <string name="email_body"> Congratulations </string>
    <string name="email_body1"> You got </string>
    <string name="email_body2">  Hello </string>
    <string name="email_body3"> Sadly, you only got </string>
    <string name="email_body4"> Good luck next time! </string>
</resources>
