<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity">

    <LinearLayout
        style="@style/layout_matchp"
        android:orientation="vertical">

        <ImageView
            style="@style/layout"
            android:background="@drawable/background1"
            android:padding="@dimen/space0" />

        <TextView
            style="@style/layout_wrap"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/spaceL"
            android:padding="@dimen/space0"
            android:text="@string/your_result"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/textSizeXL" />

        <TextView
            android:id="@+id/result_percentage"
            style="@style/layout_wrap"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/initial_peercent"
            android:textColor="@color/colorDark"
            android:textSize="@dimen/textSizeXXL" />

        <Button
            style="@style/layout_wrap"
            android:layout_gravity="center"
            android:onClick="sendResult"
            android:text="@string/send_result" />

        <Button
            style="@style/layout_wrap"
            android:layout_gravity="center"
            android:onClick="restartActivity"
            android:text="@string/restart" />

    </LinearLayout>

</ScrollView>