<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro"
            android:textSize="@dimen/textSizeL"
            android:textColor="@color/colorDark"
            android:paddingTop="@dimen/spaceS"
            android:paddingBottom="@dimen/spaceS"
            android:gravity="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/background1" />

        <EditText
            android:id="@+id/your_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spaceS"
            android:layout_marginBottom="@dimen/spaceS"
            android:layout_marginLeft="@dimen/textSizeXL"
            android:layout_marginRight="@dimen/textSizeXL"
            android:backgroundTint="@color/colorPrimaryDark"
            android:hint="@string/name_val"
            android:inputType="textCapWords"
            android:textColorLink="@color/colorDark"
            android:textCursorDrawable="@color/colorDark" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/textSizeS"
            android:layout_weight="0"
            android:onClick="startQuiz"
            android:text="@string/start_quiz"
            android:textAllCaps="true" />

    </LinearLayout>

</ScrollView>

